--- a/images/my-selection/index.html
+++ b/images/my-selection/index.html
@@ -6,10 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.jpg" type="" sizes="16x16">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <title>Foddish</title>
 </head>
 
 <body>
+    <section class="display-flex">
+        <div class="width-half">
+            <h1><samp id="orange">Skip</samp> The Diet, <br>
+                Just Eat Healthy <br>
+                With Food Network</h1>
+
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p><br>
+
+            <a class="link-button" href="https://www.linkedin.com/in/hasib-islam-823461190/" target="_blank">ORDER
+                FOOD</a>
+
+        </div>
+
+        <div class="width-half">
+            <img src="pic.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="display-flex-2">
+        <div class="width-half"><img src="pic2.png" alt=""></div>
+        <div class="width-half">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+            <br>
+            <br>
+            <a class="link-button" href="https://www.linkedin.com/in/hasib-islam-823461190/" target="_blank">contact
+                me</a>
+
+        </div>
+    </section>
 
 </body>
 
