--- a/images/my-selection/index.html
+++ b/images/my-selection/index.html
@@ -52,6 +52,45 @@
         </div>
     </section>
 
+    <section>
+        <h2 class="center">My recipies</h2>
+        <p class="center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the <br>
+            1500s.</p>
+        <div class="food-iteam">
+            <div class="one-third"><img src="food1.png" alt="">
+
+                <h3>Recipie Title</h3>
+                <p>Lorem ipsum dolor sit amet,<br>
+                    consectetur adipiscing elit. Lacus,<br>
+                    fermentum amet faucibus sed id nisi <br>
+                    lectus at.</p>
+
+            </div>
+
+            <div class="one-third"><img src="food2.jpg" alt="">
+
+                <h3>Recipie Title</h3>
+                <p>Lorem ipsum dolor sit amet,<br>
+                    consectetur adipiscing elit. Lacus,<br>
+                    fermentum amet faucibus sed id nisi <br>
+                    lectus at.</p>
+
+            </div>
+            <div class="one-third"><img src="food3.png" alt="">
+
+                <h3>Recipie Title</h3>.
+                <p>Lorem ipsum dolor sit amet, <br>
+                    consectetur adipiscing elit. Lacus, <br>
+                    fermentum amet faucibus sed id nisi <br>
+                    lectus at.</p>
+
+            </div>
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
