--- a/images/my-selection/index.html
+++ b/images/my-selection/index.html
@@ -87,10 +87,27 @@
 
             </div>
         </div>
+        <br>
+    </section>
+    <section class="public-figur-flex">
+        <div class="last-width">
+            <h1>700k</h1>
+            <p>YouTube subscribe</p>
+        </div>
+        <div class="last-width">
+            <h1>2.4m</h1>
+            <p>instagram followers</p>
+        </div>
+        <div class="last-width">
+            <h1>100k</h1>
+            <p>Dribble shot</p>
+        </div>
 
     </section>
-
-
+    <footer class="footer-text">
+        <h4> <span class="gold-color">Food</span> Network</h4>
+        <p> Eat healthy to live</p>
+    </footer>
 </body>
 
 </html>
