--- a/images/my-selection/index.html
+++ b/images/my-selection/index.html
@@ -17,7 +17,7 @@
 <body>
     <section class="display-flex">
         <div class="width-half">
-            <h1><samp id="orange">Skip</samp> The Diet, <br>
+            <h1><samp id="b11126">Skip</samp> The Diet, <br>
                 Just Eat Healthy <br>
                 With Food Network</h1>
 
@@ -91,21 +91,21 @@
     </section>
     <section class="public-figur-flex">
         <div class="last-width">
-            <h1>700k</h1>
+            <h2>700k</h2>
             <p>YouTube subscribe</p>
         </div>
         <div class="last-width">
-            <h1>2.4m</h1>
+            <h2>2.4m</h2>
             <p>instagram followers</p>
         </div>
         <div class="last-width">
-            <h1>100k</h1>
+            <h2>100k</h2>
             <p>Dribble shot</p>
         </div>
 
     </section>
     <footer class="footer-text">
-        <h4> <span class="gold-color">Food</span> Network</h4>
+        <h3> <samp class="gold-color">Food</samp> <samp id="gray-color">Network</samp> </h3><br>
         <p> Eat healthy to live</p>
     </footer>
 </body>
